tests/block.lx
var x = 1;
{
    var x = 5;
    print x;  // 5
    var y = 2;
    print y;  // 2
}

print x;      // 1
print y;      // error